objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Lead_Channel__c</fullName>
        <label>Lead Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Lead_Channel</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Last_Appointment_Set_with_Phone__c</fullName>
        <formula>Last_Appointment_Set_With__r.MobilePhone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Last Appointment Set with Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Source_Detail__c</fullName>
        <label>Lead Source Detail</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Type__c</fullName>
        <label>Lead Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Buyer</fullName>
                </value>
                <value>
                    <fullName>Cancellation</fullName>
                </value>
                <value>
                    <fullName>Contest Entry</fullName>
                </value>
                <value>
                    <fullName>Homeowner</fullName>
                </value>
                <value>
                    <fullName>Industry Professional</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Realtor</fullName>
                </value>
                <value>
                    <fullName>Staff</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Appraisal Issue</fullName>
                </value>
                <value>
                    <fullName>Changed Mind</fullName>
                </value>
                <value>
                    <fullName>Change in Employment / Relocation</fullName>
                </value>
                <value>
                    <fullName>Change in Marital Status</fullName>
                </value>
                <value>
                    <fullName>Concerns with Disclosure</fullName>
                </value>
                <value>
                    <fullName>Contingency Expiration</fullName>
                </value>
                <value>
                    <fullName>Correction</fullName>
                </value>
                <value>
                    <fullName>Customer Satisfaction  </fullName>
                </value>
                <value>
                    <fullName>Discontinued Product</fullName>
                </value>
                <value>
                    <fullName>Homesite Conditions</fullName>
                </value>
                <value>
                    <fullName>Loan Denial</fullName>
                </value>
                <value>
                    <fullName>Lot Transfer / Lot Assignment</fullName>
                </value>
                <value>
                    <fullName>Material Out of Stock</fullName>
                </value>
                <value>
                    <fullName>Medical Reasons</fullName>
                </value>
                <value>
                    <fullName>Nonperformance</fullName>
                </value>
                <value>
                    <fullName>Offer Not Accepted</fullName>
                </value>
                <value>
                    <fullName>Purchased with Competitor</fullName>
                </value>
                <value>
                    <fullName>Right of Rescission</fullName>
                </value>
                <value>
                    <fullName>Unsatisfied with Product</fullName>
                </value>
                <value>
                    <fullName>.Cost Objections</fullName>
                </value>
                <value>
                    <fullName>.Just Looking</fullName>
                </value>
                <value>
                    <fullName>.No Response</fullName>
                </value>
                <value>
                    <fullName>.Not Interested</fullName>
                </value>
                <value>
                    <fullName>.Other Builder</fullName>
                </value>
                <value>
                    <fullName>.Out of Market</fullName>
                </value>
                <value>
                    <fullName>.Timeline</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lot_Address__c</fullName>
        <formula>Lot__r.Street_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lot Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lot_Hold_Expiry_Date__c</fullName>
        <label>Lot Hold Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lot_Premium__c</fullName>
        <label>Lot Premium</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lot_Price__c</fullName>
        <label>Lot Price</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lot_Size__c</fullName>
        <label>Lot Size</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>45’</fullName>
                </value>
                <value>
                    <fullName>50’</fullName>
                </value>
                <value>
                    <fullName>55’</fullName>
                </value>
                <value>
                    <fullName>60’</fullName>
                </value>
                <value>
                    <fullName>65’</fullName>
                </value>
                <value>
                    <fullName>70’</fullName>
                </value>
                <value>
                    <fullName>75’</fullName>
                </value>
                <value>
                    <fullName>80’</fullName>
                </value>
                <value>
                    <fullName>90’</fullName>
                </value>
                <value>
                    <fullName>100’</fullName>
                </value>
                <value>
                    <fullName>50’x110’</fullName>
                </value>
                <value>
                    <fullName>60’x110’</fullName>
                </value>
                <value>
                    <fullName>70’x110’</fullName>
                </value>
                <value>
                    <fullName>60’x90’</fullName>
                </value>
                <value>
                    <fullName>70’x90’</fullName>
                </value>
                <value>
                    <fullName>80’x90’</fullName>
                </value>
                <value>
                    <fullName>90’x90’</fullName>
                </value>
                <value>
                    <fullName>100’x96’</fullName>
                </value>
                <value>
                    <fullName>Combo</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lot__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Lot</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Lot must belong to the selected subdivision, be available (open) and be released for sale.</errorMessage>
            <filterItems>
                <field>Lot__c.Subdivision__c</field>
                <operation>equals</operation>
                <valueField>$Source.Subdivision__c</valueField>
            </filterItems>
            <filterItems>
                <field>Lot__c.Released_for_Sale__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Lot__c.Status__c</field>
                <operation>equals</operation>
                <value>Open</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Lot__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lot_spec__c</fullName>
        <label>Lot spec</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>3-Car</fullName>
                </value>
                <value>
                    <fullName>4-Car</fullName>
                </value>
                <value>
                    <fullName>Drop Garage</fullName>
                </value>
                <value>
                    <fullName>Fence</fullName>
                </value>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Golf Course</fullName>
                </value>
                <value>
                    <fullName>Green Space</fullName>
                </value>
                <value>
                    <fullName>Large Yard</fullName>
                </value>
                <value>
                    <fullName>Near Amenity</fullName>
                </value>
                <value>
                    <fullName>Near Trail</fullName>
                </value>
                <value>
                    <fullName>Pool</fullName>
                </value>
                <value>
                    <fullName>Sloped</fullName>
                </value>
                <value>
                    <fullName>Small Yard</fullName>
                </value>
                <value>
                    <fullName>View</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MaritalStatus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MaritalStatus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marketing_Community__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketing Community</label>
        <referenceTo>Marketing_Community__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Model</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Model must belong to the selected subdivision.</errorMessage>
            <filterItems>
                <field>Model__c.Subdivision__c</field>
                <operation>equals</operation>
                <valueField>$Source.Subdivision__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Model__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NHC_s_Working__c</fullName>
        <label>NHC’s Working</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aleks Korowski</fullName>
                </value>
                <value>
                    <fullName>Amy Franks</fullName>
                </value>
                <value>
                    <fullName>Angie Cole</fullName>
                </value>
                <value>
                    <fullName>Angie Miller</fullName>
                </value>
                <value>
                    <fullName>Belinda Shuler</fullName>
                </value>
                <value>
                    <fullName>Brian Blair</fullName>
                </value>
                <value>
                    <fullName>David Matthys</fullName>
                </value>
                <value>
                    <fullName>Dori Conway</fullName>
                </value>
                <value>
                    <fullName>James Haugen</fullName>
                </value>
                <value>
                    <fullName>Janice Wunning</fullName>
                </value>
                <value>
                    <fullName>Kendra Johnson</fullName>
                </value>
                <value>
                    <fullName>Kevin Bendy</fullName>
                </value>
                <value>
                    <fullName>Lara Ingalsbe</fullName>
                </value>
                <value>
                    <fullName>Linda Lahrman</fullName>
                </value>
                <value>
                    <fullName>Lou Niemeyer</fullName>
                </value>
                <value>
                    <fullName>Matt Schroeder</fullName>
                </value>
                <value>
                    <fullName>Randy Perry</fullName>
                </value>
                <value>
                    <fullName>Steve Chase</fullName>
                </value>
                <value>
                    <fullName>Tina Spenser</fullName>
                    <label>Tina Spencer</label>
                </value>
                <value>
                    <fullName>Vern Carlson</fullName>
                </value>
                <value>
                    <fullName>Jesse Miller</fullName>
                </value>
                <value>
                    <fullName>Joelle Hogg</fullName>
                </value>
                <value>
                    <fullName>Michael Wagner</fullName>
                </value>
                <value>
                    <fullName>Nichole Knight</fullName>
                </value>
                <value>
                    <fullName>Stephanie McKinney</fullName>
                </value>
                <value>
                    <fullName>Sylvia Grubh</fullName>
                    <label>Sylvia Ingalsbe</label>
                </value>
                <value>
                    <fullName>Dustin Compton</fullName>
                </value>
                <value>
                    <fullName>Dennis Dresch</fullName>
                </value>
                <value>
                    <fullName>Boris Shorter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Newstar_ID__c</fullName>
        <externalId>true</externalId>
        <label>Newstar ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Newstar_Sync_Status__c</fullName>
        <label>Newstar Sync Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Children_in_Home__c</fullName>
        <label>Number of Children in Home</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Original_Community__c</fullName>
        <inlineHelpText>Original Community that this lead was interested in.</inlineHelpText>
        <label>Original Community</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Abrantes</fullName>
                </value>
                <value>
                    <fullName>Addison</fullName>
                </value>
                <value>
                    <fullName>Avalon</fullName>
                </value>
                <value>
                    <fullName>Behrens Ranch</fullName>
                </value>
                <value>
                    <fullName>Belterra</fullName>
                </value>
                <value>
                    <fullName>Blanco Vista</fullName>
                </value>
                <value>
                    <fullName>Brodie Springs</fullName>
                </value>
                <value>
                    <fullName>BRP General</fullName>
                </value>
                <value>
                    <fullName>BRP General Close-out</fullName>
                </value>
                <value>
                    <fullName>BRP General Cottages</fullName>
                </value>
                <value>
                    <fullName>Brushy Creek - The Ranch</fullName>
                </value>
                <value>
                    <fullName>Bryson</fullName>
                </value>
                <value>
                    <fullName>Caliterra</fullName>
                </value>
                <value>
                    <fullName>Caliterra - Parkside</fullName>
                </value>
                <value>
                    <fullName>Caprock at Crystal Falls</fullName>
                </value>
                <value>
                    <fullName>Cap Rock Estates</fullName>
                </value>
                <value>
                    <fullName>Cimarron Hills</fullName>
                </value>
                <value>
                    <fullName>Cottages at Abrantes</fullName>
                </value>
                <value>
                    <fullName>Cottages at Crystal Falls</fullName>
                </value>
                <value>
                    <fullName>Cottages at Northwoods</fullName>
                </value>
                <value>
                    <fullName>Easton Park - Skyline Park</fullName>
                </value>
                <value>
                    <fullName>Easton Park - Union Park</fullName>
                </value>
                <value>
                    <fullName>Escalera</fullName>
                </value>
                <value>
                    <fullName>Kissing Tree</fullName>
                </value>
                <value>
                    <fullName>Mayfield Ranch</fullName>
                </value>
                <value>
                    <fullName>Paloma Lake</fullName>
                </value>
                <value>
                    <fullName>Pearson Place</fullName>
                </value>
                <value>
                    <fullName>Provence</fullName>
                </value>
                <value>
                    <fullName>Retreat at Dripping Springs</fullName>
                </value>
                <value>
                    <fullName>Rough Hollow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pet_Number__c</fullName>
        <inlineHelpText>Number of Pets</inlineHelpText>
        <label>Pet - Number</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>more than 5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pet_Type__c</fullName>
        <inlineHelpText>Type of Pets</inlineHelpText>
        <label>Pet - Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dog</fullName>
                </value>
                <value>
                    <fullName>Cat</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <label>Plan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Day_s_to_Visit__c</fullName>
        <label>Preferred Day(s) to Visit</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>Sunday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Month_to_Visit__c</fullName>
        <label>Preferred Month to Visit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Time_s_to_Visit__c</fullName>
        <label>Preferred Time(s) to Visit</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Morning</fullName>
                </value>
                <value>
                    <fullName>Afternoon</fullName>
                </value>
                <value>
                    <fullName>Evening</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Address__c</fullName>
        <inlineHelpText>Address of the property customer is interested in.</inlineHelpText>
        <label>Property Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Real_Estate_Agent__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Real Estate Agent</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Select a valid real estate agent</errorMessage>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Real Estate Agent</value>
            </filterItems>
            <infoMessage>Select a real estate agent representing the customer for this deal.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Realtor_Company__c</fullName>
        <label>Realtor Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Realtor_Email__c</fullName>
        <label>Realtor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Realtor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Are You a Realtor?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referred_By_Email__c</fullName>
        <label>Referred By Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Referred_By_First_Name__c</fullName>
        <label>Referred By First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referred_By_Last_Name__c</fullName>
        <label>Referred By Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referred_By_Phone__c</fullName>
        <label>Referred By Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Repeat_Buyer_Prev_location__c</fullName>
        <label>Repeat Buyer Previous location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TX</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Repeat_Buyer__c</fullName>
        <label>Repeat Buyer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Agent_Sales_Office_Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Agent Sales Office Relationship</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SalesAgentSalesOfficeLink__c.Sales_Office__c</field>
                <operation>equals</operation>
                <valueField>$Source.Sales_Office__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SalesAgentSalesOfficeLink__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Assistant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Assistant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Office__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Sales Office</label>
        <referenceTo>Sales_Office__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_office_mapping__c</fullName>
        <label>Sales office mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Section_release_Phase__c</fullName>
        <label>Section/release/Phase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SessionId__c</fullName>
        <label>SessionId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Response</fullName>
                </value>
                <value>
                    <fullName>Responded</fullName>
                </value>
                <value>
                    <fullName>Responded Nurture</fullName>
                </value>
                <value>
                    <fullName>Unattended Tour</fullName>
                </value>
                <value>
                    <fullName>Confirmed Appointment</fullName>
                </value>
                <value>
                    <fullName>Missed Appointment</fullName>
                </value>
                <value>
                    <fullName>Site Visited</fullName>
                </value>
                <value>
                    <fullName>Contingent</fullName>
                </value>
                <value>
                    <fullName>Purchased</fullName>
                </value>
                <value>
                    <fullName>Prequalified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subdivision__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Project</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Subdivision must belong to the selected sales office and the selected marketing community.</errorMessage>
            <filterItems>
                <field>Subdivision__c.Sales_Office__c</field>
                <operation>equals</operation>
                <valueField>$Source.Sales_Office__c</valueField>
            </filterItems>
            <filterItems>
                <field>Subdivision__c.Marketing_Community__c</field>
                <operation>equals</operation>
                <valueField>$Source.Marketing_Community__c</valueField>
            </filterItems>
            <infoMessage>Select a subdivision</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Subdivision__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sync_to_HubSpot__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync to HubSpot</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>